--- a/style.css
+++ b/style.css
@@ -24,22 +24,12 @@
     padding-top: 100px;
     margin-left: 400px;
 }
-body {
-    justify-content: center;
-    background-color: #f4f4f4;
-}
-.search-bar {
-    align-items: center;
-    border: 1px solid black;
-    border-radius: 25px;
-    margin-left: 100px;
-    margin-top: 50px;
-}
-#search-button {
-    background-color: white;
-    border: none;
-    padding: 10px 15px;
-    background: white;
-    font-size: 18px;
-    border-radius: 50%;
+.background{
+background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/medium-shot-students-library.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgb(from black 1 2 0);
+    height: 100vh;
+    width: 100%;
+    background-size: cover;
 }
