--- a/style.css
+++ b/style.css
@@ -32,4 +32,35 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(i
     height: 100vh;
     width: 100%;
     background-size: cover;
+}body {
+    justify-content: center;
+    background-color: #f4f4f4;
+}
+.search-bar {
+    align-items: center;
+    border: 1px solid black;
+    border-radius: 25px;
+    margin-left: 100px;
+    margin-top: 50px;
+}
+#search-button {
+    background-color: white;
+    border: none;
+    padding: 10px 15px;
+    background: white;
+    font-size: 18px;
+    border-radius: 50%;
+}
+.real{
+    margin-left:75px;
+    margin-top: 60px;
+    display: flex;
+}
+.cover{
+    margin-top: 50px;
+    margin-left: 30px;
+}
+.button{
+    margin-left: 80px;
+    margin-top: 40px;
 }
