--- a/style.css
+++ b/style.css
@@ -39,3 +39,53 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(i
     background-color: white;
     padding: 15px;
 } 
+
+.back2{
+    background-color: #f3687f;
+    height: 83vh;
+    margin-top: 30px;
+    padding-top: 89px;
+}
+
+.image{
+    margin-top: -250px;
+    margin-left: 550px;
+}
+
+.back3{
+    background-color: black;
+    height: 150vh;
+    clip-path: polygon(50% 0%, 100% 13%, 100% 43%, 0% 43%, 0 12%);
+}
+
+.login{
+    color: white;
+    padding: 10px 20px;
+    margin-top: 200px;
+    background-color: #f3687f;
+    color: white;
+    border-radius: 10px;
+    margin-left: 300px;
+}
+
+.display{
+    display: flex;
+    gap: 80px;
+}
+
+.li{
+    color: white;
+    margin-left: 450px;
+    margin-top: -50px;
+    list-style: none;
+}
+
+.ul{
+    color: white;
+    margin-top: -70px;
+    list-style: none;
+}
+
+.hr{
+    margin-top: 50px;
+}
