--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(i
     height: 100vh;
     width: 100%;
     background-size: cover;
-}body {
+}
+body {
     justify-content: center;
     background-color: #f4f4f4;
 }
