--- a/style.css
+++ b/style.css
@@ -65,3 +65,51 @@ body {
     margin-left: 80px;
     margin-top: 40px;
 }
+.image{
+    background-image: url(images/bookdiverse/image\ 27.png);
+    background-position: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
+.grid-container{
+    display: grid;
+    gap: 30px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    /* display: inline-block; */
+    position: relative;
+}
+.grid-item{
+    height: 100px;
+    
+}
+.grid-item:nth-child(1){
+grid-column-start: 1;
+/* grid-column-end: 2; */
+}
+.grid-container2{
+    display: grid;
+    gap: 30px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    /* display: inline-block; */
+    position: relative;
+}
+.grid-item2{
+    height: 100px;
+    
+}
+.grid-item:nth-child(1){
+grid-column-start: 1;
+/* grid-column-end: 2; */
+}
+.land{
+    background-image: linear-gradient();
+    /* background-image: linear-gradient url(images/bookdiverse/medium-shot-students-library.jpg); */
+    background-position: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+    /* filter: blur(5px); */
+}
