--- a/style.css
+++ b/style.css
@@ -42,26 +42,29 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(i
 
 .back2{
     background-color: #f3687f;
-    height: 83vh;
+    height: 30vh;
     margin-top: 30px;
     padding-top: 89px;
 }
 
 .image{
-    margin-top: -250px;
-    margin-left: 550px;
+    margin-top: -100px;
+    margin-left: 800px;
 }
 
 .back3{
-    background-color: black;
-    height: 150vh;
+    margin: 0;
+    padding: 0;
+    background-color: rgb( 29, 18, 19);
+    min-height: 100vh;
+    overflow: hidden;
     clip-path: polygon(50% 0%, 100% 13%, 100% 43%, 0% 43%, 0 12%);
 }
 
 .login{
     color: white;
     padding: 10px 20px;
-    margin-top: 200px;
+    margin-top: 150px;
     background-color: #f3687f;
     color: white;
     border-radius: 10px;
@@ -84,8 +87,4 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(i
     color: white;
     margin-top: -70px;
     list-style: none;
-}
-
-.hr{
-    margin-top: 50px;
 }
