--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(i
     margin-left: 80px;
     margin-top: 40px;
 }
-.image{
+.photo{
     background-image: url(images/bookdiverse/image\ 27.png);
     background-position: 0;
     background-repeat: no-repeat;
