--- a/style.css
+++ b/style.css
@@ -173,3 +173,9 @@ grid-column-start: 1;
     gap: 30px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
+.grid-i{
+    border: 2px solid rgb(173, 172, 172);
+    height: 29vh;
+    width: 95%;
+    margin-left: 70px;
+}
