--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .box{
     font-family: sans-serif
 }
@@ -61,7 +66,7 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(i
     margin-left: 80px;
     margin-top: 40px;
 }
-.image{
+.image1{
     background-image: url(images/bookdiverse/image\ 27.png);
     background-position: 0;
     background-repeat: no-repeat;
