--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
     margin-left: 400px;
 }
 .background{
-background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/medium-shot-students-library.jpg);
+background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url();
     background-position: center;
     background-repeat: no-repeat;
     background-color: rgb(from black 1 2 0);
